# flask-blog

./: .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml
.github/workflows/: code-quality.yml
flaskr/: __init__.py  auth.py  blog.py  db.py
flaskr/templates/: base.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/blog/: index.html
